# wisp-1

./: .travis.yml  README.md  build.sbt  core.wisp  wisp  wisp.cabal
batteries/: ackermann-test.wisp  ackermann.wisp  core-test.wisp  core.wisp  test.wisp
core/: ack.wisp  syntax.wisp  test.wisp  util.wisp
cpp/: README.md  alloc.hpp  junk.hpp  main.cc  make.sh  object.hpp
cpp/interpretter/: interpretter.hpp
cpp/persistent/: list.hpp  map.hpp  string.hpp
cpp/reader/: conversion.hpp  parser.cc  parser.hpp  prim_val.hpp
cpp/test/: main.cc
docs/: primitives.md  syntax.md
haskell/: README.md
haskell/src/: Atom.hs  Main.hs
resources/: README.md  wisp.lang
scala/: README.md  build.sbt  watch.sh  wisp
scala/src/main/: resources
scala/src/main/scala/espringe/wisp/: atom.scala  interpretter.scala  main.scala  package.scala  parser.scala  sourceinfo.scala
scala/src/main/scala/wisp/: interpretter.scala
scala/src/test/scala/wisp/UnitTests/: InterpretterSpec.scala  ParserSpec.scala
src/main/scala/wisp/: Dict.scala  Vect.scala  atom.scala  builtin.scala  call.scala  dag.scala  dict.scala  environment.scala  interpretter.scala  loader.scala  main.scala  package.scala  parser.scala  procedure.scala  reader.scala  vect.scala
src/test/scala/wisp/: ReaderSpec.scala
src/test/scala/wisp/UnitTests/: InterpretterSpec.scala  ParserSpec.scala  ReaderSpec.scala  VectSpec.scala
wisp/: test.wisp
