name:           wisp
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         eric

executable whisp
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

library 
  build-depends:   
                   base >= 4,
                   parsec == 3.1.3,
                   containers
  hs-source-dirs:  src
  ghc-options:     -Wall

